--- a/src/UserBundle/Resources/views/Profile/Partials/_index-tab-profile-info.html.twig
+++ b/src/UserBundle/Resources/views/Profile/Partials/_index-tab-profile-info.html.twig
@@ -1,5 +1,5 @@
 <div id="tab-profile-info" class="col s12" style="color: #5e5e5e;">
-  <div class="row" style="margin-top: 0px;">
+  <div class="row" style="margin-top: 0px;" id="edit-profile-button-box">
     <nav style="padding-right: 25px;color: #424242;background-color: #fff;box-shadow: 0 0px 0px rgba(0,0,0,.26)!important;padding-left: 30px;">
       <div class="nav-wrapper">
         <a href="#!" class="brand-logo"></a>
