--- a/src/DashboardBundle/Resources/views/Properties/show.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/show.html.twig
@@ -10,19 +10,21 @@
 		<a href="{{ path('properties_index') }}">My Properties</a>
 		<i class="mdi-navigation-chevron-right"></i>
 	</li>
-	<li><a>Show</a></li>
+	<li><a>{{ property.name }}</a></li>
 {% endblock breadcrumb%}
 
 {% block content %}
-	<div class="card">
-		<div class="title">
-			<h5> Properties - {{ property.name }}</h5>
+	<div class="row">
+		<div class="col s12">
+			{% include 'DashboardBundle:Properties:Partials/_show-tabbar.html.twig' %}
 		</div>
-		<div class="content">
-			aaaaaaaaaa
+		<div id="test1" class="col s12">
+			{% include 'DashboardBundle:Properties:Partials/_show-tab-information.html.twig' %}
 		</div>
+		{#<div id="tab-gallery" class="col s12">#}
+			{#{% include 'DashboardBundle:Properties:Partials/_show-tab-gallery.html.twig' %}#}
+		{#</div>#}
 	</div>
-
 {% endblock content%}
 
 {% block javascripts %}
