--- a/src/DashboardBundle/Resources/views/Common/Partials/_backend-breadcrumb-body-down.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_backend-breadcrumb-body-down.html.twig
@@ -1,9 +1,9 @@
  </ul>
     </div>
-      <div class="col s12 m3 l2 right-align">
-        <a href="http://html.nkdev.info/_con/ui-buttons.html#!" class="btn grey lighten-3 grey-text z-depth-0 chat-toggle">
-          <i class="fa fa-comments"></i>
-        </a>
-      </div>
+      {#<div class="col s12 m3 l2 right-align">#}
+        {#<a href="http://html.nkdev.info/_con/ui-buttons.html#!" class="btn grey lighten-3 grey-text z-depth-0 chat-toggle">#}
+          {#<i class="fa fa-comments"></i>#}
+        {#</a>#}
+      {#</div>#}
     </div>
 </div>
