--- a/src/DashboardBundle/Resources/views/Properties/show.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/show.html.twig
@@ -15,9 +15,9 @@
 
 {% block content %}
 	<div class="row">
-		<div class="col s12">
-			{% include 'DashboardBundle:Properties:Partials/_show-tabbar.html.twig' %}
-		</div>
+		{#<div class="col s12">#}
+			{#{% include 'DashboardBundle:Properties:Partials/_show-tabbar.html.twig' %}#}
+		{#</div>#}
 		<div id="test1" class="col s12">
 			{% include 'DashboardBundle:Properties:Partials/_show-tab-information.html.twig' %}
 		</div>
