--- a/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-information.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-information.html.twig
@@ -40,8 +40,8 @@
                 <label for="property_bathrooms" class="">Baths</label>
               </div>
               <div class="input-field">
-                {{ form_widget(property_form.parking_spaces) }}
-                <label for="property_parking_spaces" class="">Parking</label>
+                {{ form_widget(property_form.list_price) }}
+                <label for="property_year_built" class="">Price</label>
               </div>
               <div class="input-field">
                 {{ form_widget(property_form.unit_size) }}
@@ -50,23 +50,33 @@
             </div>
             <div class="col m6">
               <div class="input-field">
+                {{ form_widget(property_form.type)}}
+              </div>
+              <div class="input-field">
                 {{ form_widget(property_form.year_built) }}
                 <label for="property_year_built" class="">Year Built</label>
               </div>
               <div class="input-field">
-                {{ form_widget(property_form.list_price) }}
-                <label for="property_year_built" class="">Price</label>
+                {{ form_widget(property_form.parking_spaces) }}
+                <label for="property_parking_spaces" class="">Parking</label>
               </div>
-              <div class="input-field">
-                {{ form_widget(property_form.lease_term) }}
-                <label for="property_lease_term" class="">Lease Term</label>
+              <div class="row" style="margin-top: 0px;">
+                <div class="col m8">
+                  <div class="input-field">
+                    {{ form_widget(property_form.lease_term) }}
+                    <label for="property_lease_term" class="">Lease Term</label>
+                  </div>
+                </div>
+                <div class="col m4">
+                  <div class="input-field">
+                    <p style="margin-top: 5px;">
+                      {{ form_widget(property_form.for_rent, {'attr': {'class':'filled-in'}}) }}
+                      <label for="property_for_rent" style="left: 0px !important;">Is it for rent?</label>
+                    </p>
+                  </div>
+                </div>
               </div>
-              <div class="input-field">
-                <p style="margin-top: 5px;">
-                  {{ form_widget(property_form.for_rent, {'attr': {'class':'filled-in'}}) }}
-                  <label for="property_for_rent" style="left: 0px !important;">Is it for rent?</label>
-                </p>
-              </div>
+
 
             </div>
           </div>
@@ -96,21 +106,6 @@
       </div>
 
       <div class="row">
-        <div class="col m7">
-          <div class="card">
-            <div class="title">
-              <h5> Location </h5>
-            </div>
-            <div class="content" style="padding-top: 0px !important;padding-bottom: 0px !important;padding: 10px;min-height: 408px;">
-              <div class="row" style="margin-top: 5px">
-                <div class="col m12" style="padding-bottom: 5px;">
-                  <div id="map-canvas" style="min-height: 395px;"></div>
-                </div>
-              </div>
-              <div class="row" style="margin-top: 5px"></div>
-            </div>
-          </div>
-        </div>
         <div class="col m5">
           <div class="card">
             <div class="title">
@@ -119,9 +114,6 @@
             <div class="content" style="padding-top: 0px !important;padding-bottom: 5px;padding: 10px">
               <div class="row" style="margin-top: 0px">
                 <div class="col m12" style="padding-bottom: 5px;">
-                  <div class="input-field" style="margin-top: 10px !important">
-                    {{ form_widget(property_form.type)}}
-                  </div>
                   <div class="input-field">
                     {{ form_widget(property_form.address, {'attr':{'placeholder':''}}) }}
                     <label for="property_address" class="">Address</label>
@@ -146,6 +138,18 @@
                     {{ form_widget(property_form.postal_code) }}
                     <label for="property_postal_code" class="">Postal Code</label>
                   </div>
+                </div>
+              </div>
+              <div class="row" style="margin-top: 5px"></div>
+            </div>
+          </div>
+        </div>
+        <div class="col m7">
+          <div class="card">
+            <div class="content" style="padding-top: 0px !important;padding-bottom: 0px !important;padding: 10px;min-height: 406px;">
+              <div class="row" style="margin-top: 5px">
+                <div class="col m12" style="padding-bottom: 5px;">
+                  <div id="map-canvas" style="min-height: 392px;"></div>
                 </div>
               </div>
               <div class="row" style="margin-top: 5px"></div>
