--- a/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-information.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-information.html.twig
@@ -1,3 +1,10 @@
+<style>
+  textarea#property_amenities,textarea#property_features {
+    height: 150px !important;
+    overflow-y: auto !important;
+  }
+</style>
+
 <div class="row" id="main-info" style="margin-top: 0px;">
   <div class="col m12">
     {{ form_start(property_form, {'action': path('properties_save'), 'method': 'POST', 'id':'property_form'}) }}
@@ -76,8 +83,6 @@
                   </div>
                 </div>
               </div>
-
-
             </div>
           </div>
         </div>
@@ -111,7 +116,7 @@
             <div class="title">
               <h5> Location </h5>
             </div>
-            <div class="content" style="padding-top: 0px !important;padding-bottom: 5px;padding: 10px">
+            <div class="content" style="padding-top: 5px;padding-bottom: 15px;">
               <div class="row" style="margin-top: 0px">
                 <div class="col m12" style="padding-bottom: 5px;">
                   <div class="input-field">
@@ -146,7 +151,7 @@
         </div>
         <div class="col m7">
           <div class="card">
-            <div class="content" style="padding-top: 0px !important;padding-bottom: 0px !important;padding: 10px;min-height: 406px;">
+            <div class="content" style="padding-top: 5px !important;padding-bottom: 8px !important;padding-left: 10px;padding-right: 10px;min-height: 396px;">
               <div class="row" style="margin-top: 5px">
                 <div class="col m12" style="padding-bottom: 5px;">
                   <div id="map-canvas" style="min-height: 392px;"></div>
