Show property and Edit property

--- a/src/DashboardBundle/Resources/views/Grid/gridTemplate.html.twig
+++ b/src/DashboardBundle/Resources/views/Grid/gridTemplate.html.twig
@@ -245,7 +245,7 @@
 {% set from = column.data.from is defined ? column.data.from : null %}
 {% set to = column.data.to is defined ? column.data.to : null %}
     
-    <span class="grid-filter-input" style="position: absolute;right: 0">
+    <span class="grid-filter-input" style="position: absolute;left: 0">
 
             <span class="grid-filter-input-query">
                 <table class="">   
