Show property and Edit property

--- a/src/UserBundle/Resources/views/Profile/Partials/_profile-picture.html.twig
+++ b/src/UserBundle/Resources/views/Profile/Partials/_profile-picture.html.twig
@@ -10,7 +10,7 @@
         <div class="indeterminate"></div>
     </div>
     <div class="file-field input-field pmop-edit" style=" margin-top: 0px !important;padding: 0px;">
-        <div class="btn" style="background-color: transparent;">
+        <div class="btn" style="background-color: transparent;width: 100%;">
             <span><i class="mdi mdi-image-photo-camera left"></i> Update Picture</span>
             <input name="file" class="cloudinary-fileupload" type="file">
         </div>
