--- a/src/UserBundle/Resources/views/Profile/Partials/_index-tab-profile-info.html.twig
+++ b/src/UserBundle/Resources/views/Profile/Partials/_index-tab-profile-info.html.twig
@@ -5,8 +5,15 @@
         <a href="#!" class="brand-logo"></a>
         <ul class="right hide-on-med-and-down">
           <li>
-            <a id="edit-profile" style="color: #9E9E9E" class="dropdown-button" href="#!">
-              <i class="mdi mdi-editor-mode-edit" style="font-size: 18px;"></i>
+            <a id="edit-profile" style="color: #9E9E9E;padding: 0px;width: 55px;" class="dropdown-button" href="#!">
+              <div class="row" style="margin-top: 0px">
+                <div class="col m4" style="padding-right: 0px;padding-bottom: 0px">
+                  <i class="mdi mdi-editor-mode-edit" style="font-size: 18px;width: 20px;"></i>
+                </div>
+                <div class="col m8" style="padding-bottom: 0px">
+                  <span>  Edit</span>
+                </div>
+              </div>
             </a>
           </li>
         </ul>
