--- a/src/DashboardBundle/Resources/views/Common/Partials/_backend-sidebar.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_backend-sidebar.html.twig
@@ -62,7 +62,7 @@
         </li>
         <li>
           <a href="{{ path('upgrade_index') }}" class="waves-effect waves-blue">
-            <i class="fa fa-arrow-circle-o-up"></i> Upgrade Plan
+            <i class="fa fa-credit-card"></i> Upgrade Plan
           </a>
         </li>
       </ul>
